--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">イベントとリスナサンプル</string>
     <string name="tv_name">お名前を入力してください</string>
-    <string name="bt_click">表示する</string>
+    <string name="bt_click">表示するする</string>
     <string name="bt_clear">クリア</string>
 </resources>
